force-app/main/default/objects/AddressISOCodeMap__mdt/AddressISOCodeMap__mdt.object-meta.xml
<CustomObject>
    <label>AddressISOCodeMap</label>
    <pluralLabel>AddressISOCodeMaps</pluralLabel>
</CustomObject>