force-app/main/default/objects/AddressISOCodeMap__mdt/fields/UN_Code__c.field-meta.xml
<CustomField>
    <fullName>UN_Code__c</fullName>
    <label>UN Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>